logs/cazy-parser.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.6.0.dist-info'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/cazy_parser'...
Compiling './lib/python3.5/site-packages/cazy_parser/create_cazy_db.py'...
***   File "./lib/python3.5/site-packages/cazy_parser/create_cazy_db.py", line 36
    print '''
            ___   __   ____  _  _     ____   __   ____  ____  ____  ____
           / __) / _\ (__  )( \/ )___(  _ \ / _\ (  _ \/ ___)(  __)(  _ \\
          ( (__ /    \ / _/  )  /(___)) __//    \ )   /\___ \ ) _)  )   /
           \___)\_/\_/(____)(__/     (__)  \_/\_/(__\_)(____/(____)(__\_)

			A simple way to retrieve fasta sequences from CAZy Database (:

				This is the database creator script.

	'''
             
                                                                        
                                                                          
                                                                         
                                                                         

			                                                              

				                                    

	  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cazy_parser/extract_cazy_ids.py'...
***   File "./lib/python3.5/site-packages/cazy_parser/extract_cazy_ids.py", line 35
    print '''
            ___   __   ____  _  _     ____   __   ____  ____  ____  ____
           / __) / _\ (__  )( \/ )___(  _ \ / _\ (  _ \/ ___)(  __)(  _ \\
          ( (__ /    \ / _/  )  /(___)) __//    \ )   /\___ \ ) _)  )   /
           \___)\_/\_/(____)(__/     (__)  \_/\_/(__\_)(____/(____)(__\_)

             A simple way to retrieve fasta sequences from CAZy Database (:

                     This is the accession code retrieval script.

	'''
             
                                                                        
                                                                          
                                                                         
                                                                         

                                                                           

                                                                 

	  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cazy_parser-1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
